--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   --darker-color: #001a2e;
   --border-radius: 2rem;
   --shadow: 2px 8px 12px rgba(0, 0, 0, 0.4);
-  --main-transition: 1s;
+  --main-transition: 1s ease-in-out;
 }
 
 * {
@@ -891,7 +891,6 @@ a {
   height: 45rem;
   border-radius: 2rem;
   position: relative;
-  transition: 2s ease-in-out;
   overflow: hidden;
   box-shadow: var(--shadow);
 }
@@ -899,9 +898,10 @@ a {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: var(--main-transition);
 }
-.section-services .container .services-box:hover {
-  transform: translateY(-10px);
+.section-services .container .services-box:hover img {
+  transform: scale(1.3);
 }
 .section-services .container .services-box .services-info {
   display: none;
