--- a/css/style.css
+++ b/css/style.css
@@ -2195,6 +2195,9 @@ a.jx-knightlab:focus span.juxtapose-name {
 .specifications .container .box:nth-child(2) .img {
   order: 2;
 }
+.specifications .container .box:nth-child(4) .img {
+  order: 1;
+}
 .specifications .container .box .last {
   order: 2;
 }
