--- a/css/style.css
+++ b/css/style.css
@@ -2232,6 +2232,9 @@ a.jx-knightlab:focus span.juxtapose-name {
   .specifications .container .box:nth-child(2) .img {
     order: 0;
   }
+  .specifications .container .box:nth-child(4) .img {
+    order: 0;
+  }
   .specifications .container .box .last {
     order: 0;
   }
