--- a/css/style.css
+++ b/css/style.css
@@ -1771,16 +1771,19 @@ a.jx-knightlab:focus span.juxtapose-name {
 /* end slider */
 
 /* start ppf-type */
+.tint-type,
 .ppf-type {
   padding: 4rem 2rem;
   background-color: #ececec;
 }
+.tint-type .container,
 .ppf-type .container {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   gap: 3rem;
 }
+.tint-type .container .box,
 .ppf-type .container .box {
   box-shadow: var(--shadow);
   background-color: white;
@@ -1788,24 +1791,30 @@ a.jx-knightlab:focus span.juxtapose-name {
   overflow: hidden;
   transition: 1s ease-in-out;
 }
+.tint-type .container .box:hover,
 .ppf-type .container .box:hover {
   transform: translateY(-10px);
 }
+.tint-type .container .box img,
 .ppf-type .container .box img {
   width: 100%;
   max-width: 100%;
 }
+.tint-type .container .box .content,
 .ppf-type .container .box .content {
   padding: 2rem;
 }
+.tint-type .container .box .content h3,
 .ppf-type .container .box .content h3 {
   color: var(--primary-color);
 }
+.tint-type .container .box .content p,
 .ppf-type .container .box .content p {
   margin: 10px 0 0;
   line-height: 1.5;
   color: #777;
 }
+.tint-type .container .box .info,
 .ppf-type .container .box .info {
   padding: 2rem;
   border-top: 1px solid #e6e6e7;
@@ -1814,13 +1823,16 @@ a.jx-knightlab:focus span.juxtapose-name {
   align-items: center;
   gap: 2rem;
 }
+.tint-type .container .box .info a,
 .ppf-type .container .box .info a {
   color: var(--primary-color);
   font-weight: bold;
 }
+.tint-type .container .box .info i,
 .ppf-type .container .box .info i {
   color: var(--primary-color);
 }
+.tint-type .container .box:hover .info i,
 .ppf-type .container .box:hover .info i {
   animation: moving-arrow 0.6s linear infinite;
 }
